--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.myasiny.sehirian">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:label="@string/app_name"
-        android:icon="@drawable/icon_launcher"
-        android:roundIcon="@drawable/icon_launcher_round"
         android:allowBackup="true"
+        android:icon="@drawable/icon_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@drawable/icon_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -22,16 +21,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".DashboardActivity"
+            android:name=".TimelineActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".EventActivity"
+            android:name=".GpaActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".InboxActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MessageActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".EventActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".GradeActivity"
@@ -40,16 +45,20 @@
             android:name=".FileActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Inbox2Activity"
+            android:name=".ExamsActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Grade2Activity"
+            android:name=".DocsActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".File2Activity"
+            android:name=".ProfileActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".CalculatorActivity"
+            android:name=".PostActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".HelpActivity"
             android:screenOrientation="portrait" />
     </application>
+
 </manifest>
